--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head> <title>Artem Tesart — видеограф и режиссёр монтажа</title>
 <meta charset="utf-8" />
-<meta name="theme-color" content="#0b0b10">
+<meta name="theme-color" content="#0b0a10">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <meta name="title" content="Artem Tesart — видеограф и режиссёр монтажа">
 <meta name="description" content="Коммерческие съёмки, авторские проекты, трансляции, клипы, свадьбы. Москва, Санкт-Петербург и другие города." /> <!-- Open Graph -->
@@ -18,7 +18,7 @@
 <meta name="twitter:image" content="https://tesart.site/og_preview.jpg"> <meta name="viewport" content="width=device-width, initial-scale=1" /> <!-- Favicon -->
 <link rel="icon" type="image/png" href="/favicon.png">
 <link rel="apple-touch-icon" href="/favicon.png"> <link rel="stylesheet" href="assets/css/base.css" /> <link rel="stylesheet" href="assets/css/spa.css" /> <link rel="stylesheet" href="assets/css/home.css" /> <link rel="stylesheet" href="assets/css/portfolio.css" /> <link rel="stylesheet" href="assets/css/blog.css" /> <link rel="stylesheet" href="assets/css/about.css" /> <link rel="manifest" href="/manifest.webmanifest">
-<meta name="theme-color" content="#0a0812"> <!-- iOS (ограниченно, но полезно) -->
+<!-- iOS (ограниченно, но полезно) -->
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <link rel="apple-touch-icon" href="/icon-192.png"> </head> <body class="spa is-home is-loading"> <main class="spa-main"> <div class="preload" aria-hidden="true"><div class="preload__title">ARTEM<br>TESART</div><div class="preload__glow"></div></div> <div class="cinema-stage" aria-hidden="true"> <div class="cinema-layer layer--back"></div> <div class="cinema-layer layer--mid"></div> <div class="cinema-layer layer--front"></div> <div class="cinema-glow"></div> </div> <!-- GLOBAL HEADER --> <header class="page-header spa-chrome" aria-label="Main Navigation"> <div class="page-header__name">ARTEM TESART</div> <nav class="page-header__nav"> <button class="nav-pill js-goto" data-target="home" type="button">Главная</button> <button class="nav-pill js-goto" data-target="portfolio" type="button">Портфолио</button> <button class="nav-pill js-goto" data-target="blog" type="button">Блог</button> <button class="nav-pill js-goto" data-target="about" type="button">Обо мне</button> </nav> </header> <!-- PAGES STRIP --> <div class="pages-strip"> <!-- HOME --> <section class="page page--home" data-page="home"> <section id="hero"> <div class="hero-content"> <div class="hero-panel"> <h1 class="hero-title hero-reveal">ARTEM<br>TESART</h1> <p class="hero-tagline hero-reveal"> Трансляции, промышленная съёмка, свадьбы и авторские проекты. </p> <p class="hero-role hero-reveal">DIRECTOR · CINEMATOGRAPHER</p> <div class="hero-buttons hero-reveal"> <button class="button hero-button js-goto" data-target="portfolio" type="button">Портфолио</button> <button class="button hero-button js-goto" data-target="blog" type="button">Блог</button> <button class="button hero-button js-goto" data-target="about" type="button">Обо мне</button> </div> <div class="contact-icons contact-icons--text hero-reveal"> <a href="mailto:tysart@arttistfoto.ru" class="ci" aria-label="Email">@</a> <a href="https://t.me/tysartpro" target="_blank" rel="noopener" class="ci" aria-label="Telegram">TG</a> <a href="https://vk.com/tysartru" target="_blank" rel="noopener" class="ci" aria-label="VK">VK</a>
